--- a/package.json
+++ b/package.json
@@ -8,13 +8,10 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "tslint": "tsc --noEmit",
-    "lint": "eslint --ext .jsx,.js,.tsx,.ts  ./src"
-  },
-  "lint-staged": {
-    "*.{js,jsx,ts,tsx}": [
-      "lint",
-      "prettier --write"
-    ]
+    "lint": "eslint --ext .jsx,.js,.tsx,.ts  ./src",
+    "prepare": "husky install",
+    "prettier-fix": "prettier --write --ignore-path .gitignore .",
+    "prettier-check": "prettier --check --ignore-path .gitignore ."
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -29,9 +26,11 @@
     "@vitejs/plugin-react": "^3.0.1",
     "eslint": "^8.32.0",
     "eslint-plugin-react": "^7.32.1",
+    "lint-staged": "^13.1.0",
     "prettier": "^2.8.3",
     "typescript": "^4.9.4",
     "typescript-eslint": "^0.0.1-alpha.0",
-    "vite": "^4.0.4"
+    "vite": "^4.0.4",
+    "husky": "^8.0.0"
   }
 }
