--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,20 +1,28 @@
 {
+  "env": { "browser": true, "es2022": true },
   "parser": "@typescript-eslint/parser",
-  "env": { "browser": true },
   "parserOptions": {
-    "ecmaFeatures": {
-      "jsx": true
-    }
+    "ecmaFeatures": { "jsx": true }
   },
   "extends": [
     "eslint:recommended",
-    "plugin:@typescript-eslint/recommended",
     "plugin:react/recommended",
     "plugin:react/jsx-runtime"
   ],
   "plugins": ["@typescript-eslint"],
   "root": true,
   "rules": {
+    "import/no-unresolved": 0,
     "@typescript-eslint/no-unused-vars": 0
-  }
+  },
+  "overrides": [
+    {
+      "files": ["./vite.config.ts"],
+      "env": { "node": true }
+    },
+    {
+      "files": ["*.test.+(ts|tsx|js|jsx)"],
+      "env": { "jest": true }
+    }
+  ]
 }
