--- a/.prettierrc
+++ b/.prettierrc
@@ -1,3 +1,6 @@
 {
-  "tabWidth": 2
+  "tabWidth": 2,
+  "importOrder": ["^react(.*)$", "^@/(.*)$", "^\\..*(?<!\\.css)$", "\\.css$"],
+  "importOrderSeparation": false,
+  "importOrderSortSpecifiers": true
 }
