--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vite-react-typescript-starter",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.1.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -11,13 +11,16 @@
     "lint": "eslint --ext .jsx,.js,.tsx,.ts  ./src",
     "prepare": "husky install",
     "prettier-fix": "prettier --write --ignore-path .gitignore .",
-    "prettier-check": "prettier --check --ignore-path .gitignore ."
+    "prettier-check": "prettier --check --ignore-path .gitignore .",
+    "test": "jest ./tests"
   },
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@trivago/prettier-plugin-sort-imports": "^4.0.0",
+    "@types/jest": "^29.2.6",
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
@@ -26,11 +29,13 @@
     "@vitejs/plugin-react": "^3.0.1",
     "eslint": "^8.32.0",
     "eslint-plugin-react": "^7.32.1",
+    "husky": "^8.0.0",
+    "jest": "^29.3.1",
     "lint-staged": "^13.1.0",
     "prettier": "^2.8.3",
+    "ts-jest": "^29.0.5",
     "typescript": "^4.9.4",
     "typescript-eslint": "^0.0.1-alpha.0",
-    "vite": "^4.0.4",
-    "husky": "^8.0.0"
+    "vite": "^4.0.4"
   }
 }
