--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "tslint": "tsc --noEmit",
-    "lint": "eslint --ext .jsx,.js,.tsx,.ts  ./src",
+    "lint": "eslint",
     "prepare": "husky install",
     "prettier-fix": "prettier --write --ignore-path .gitignore .",
     "prettier-check": "prettier --check --ignore-path .gitignore .",
@@ -28,12 +28,12 @@
     "@vitejs/plugin-react": "^4.2.1",
     "eslint": "^8.32.0",
     "eslint-plugin-react": "^7.32.1",
-    "husky": "^8.0.0",
+    "husky": "^9.0.11",
     "jest": "^29.3.1",
     "prettier": "^3.2.4",
     "ts-jest": "^29.0.5",
     "typescript": "^5.3.3",
-    "typescript-eslint": "^0.0.1-alpha.0",
+    "typescript-eslint": "7.10.0",
     "vite": "^5.0.12"
   }
 }
