--- a/package.json
+++ b/package.json
@@ -20,20 +20,20 @@
   },
   "devDependencies": {
     "@types/jest": "^29.2.6",
-    "@types/node": "^20.11.5",
+    "@types/node": "^22.0.0",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
-    "@typescript-eslint/eslint-plugin": "^6.19.0",
-    "@typescript-eslint/parser": "^6.19.0",
+    "@typescript-eslint/eslint-plugin": "^7.18.0",
+    "@typescript-eslint/parser": "^7.18.0",
     "@vitejs/plugin-react": "^4.2.1",
-    "eslint": "^8.32.0",
+    "eslint": "^8.56.0",
     "eslint-plugin-react": "^7.32.1",
     "husky": "^9.0.11",
     "jest": "^29.3.1",
     "prettier": "^3.2.4",
     "ts-jest": "^29.0.5",
     "typescript": "^5.3.3",
-    "typescript-eslint": "7.10.0",
+    "typescript-eslint": "^7.18.0",
     "vite": "^5.0.12"
   }
 }
