fix eslint no-unused issue

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,6 +17,12 @@
   },
   "overrides": [
     {
+      "files": ["*.+(ts|tsx)"],
+      "rules": {
+        "no-unused-vars": 0
+      }
+    },
+    {
       "files": ["./vite.config.ts"],
       "env": { "node": true }
     },
