switch tests to vitest

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -28,7 +28,7 @@
     },
     {
       "files": ["*.test.+(ts|tsx|js|jsx)"],
-      "env": { "jest": true }
+      "globals": { "screen": "off" }
     }
   ]
 }
