--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "lint": "eslint",
     "prettier-fix": "prettier --write --ignore-path .gitignore .",
     "prettier-check": "prettier --check --ignore-path .gitignore .",
-    "test": "jest ./tests",
+    "test": "vitest run ./tests",
     "prepare": "husky"
   },
   "dependencies": {
@@ -19,21 +19,23 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@types/jest": "^29.2.6",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.4.8",
+    "@testing-library/react": "^16.0.0",
     "@types/node": "^22.0.0",
-    "@types/react": "^18.0.26",
-    "@types/react-dom": "^18.0.10",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
     "@typescript-eslint/parser": "^7.18.0",
     "@vitejs/plugin-react": "^4.2.1",
     "eslint": "^8.56.0",
     "eslint-plugin-react": "^7.32.1",
     "husky": "^9.0.11",
-    "jest": "^29.3.1",
+    "jsdom": "^24.1.1",
     "prettier": "^3.2.4",
-    "ts-jest": "^29.0.5",
     "typescript": "^5.3.3",
     "typescript-eslint": "^7.18.0",
-    "vite": "^5.0.12"
+    "vite": "^5.0.12",
+    "vitest": "^2.0.4"
   }
 }
